# lms_api

./: .gitignore  README.md  main.py  my_notes.txt  psqltest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1e1ed010da85_.py
api/: courses.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: user.py
pydantic_shemas/: course.py  user.py
