[tool.poetry]
name = "lms-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.0"
pydantic = "^2.6.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
